feat: fr translation

--- a/workspace/lang/fr.json
+++ b/workspace/lang/fr.json
@@ -1,4 +1,6 @@
 {
 	"Smarter content management.": "Une gestion de contenu plus intelligente.",
-	"DADI is <strong>open-source</strong>, headless content management technology. It’s built to make <strong>developers</strong> and <strong>editors</strong> happy.": "DADI est « open-source », « headless » Système de gestion de contenu. Il est conçu pour rendre les <strong>développeurs</strong> et les éditeurs heureux."
+	"DADI is open-source, headless content management technology. It’s built to make developers and editors happy.": "DADI est « open-source », « headless » Système de gestion de contenu. Il est conçu pour rendre les développeurs et les éditeurs heureux.",
+	"Developers can start an API in 30 seconds via NPM.": "Les développeurs peuvent démarrer une API en 30 secondes via NPM.",
+	"Read more": "Continuer"
 }
