feat: wip DE success stories

--- a/web/workspace/lang/de.json
+++ b/web/workspace/lang/de.json
@@ -57,5 +57,8 @@
   "Install with NPM": "Mit NPM installieren",
   "How to install": "Installationsanleitung",
   "Install guide coming soon": "Installationsanleitung bald verfügbar",
-  "Use with other <strong>DADI</strong> applications:": "Benutzung mit anderen <strong>DADI</strong> Anwendungen:"
+  "Use with other <strong>DADI</strong> applications:": "Benutzung mit anderen <strong>DADI</strong> Anwendungen:",
+  "Requirements": "Voraussetzungen",
+  "Results": "Ergebnisse",
+  "See more success stories": "Mehr Erfolgsgeschichten lesen"
 }
