feat: DE support header

--- a/web/workspace/lang/de.json
+++ b/web/workspace/lang/de.json
@@ -58,6 +58,11 @@
   "How to install": "Installationsanleitung",
   "Install guide coming soon": "Installationsanleitung bald verfügbar",
   "Use with other <strong>DADI</strong> applications:": "Benutzung mit anderen <strong>DADI</strong> Anwendungen:",
+  "Need a hand getting started?": "Brauchst Du Starthilfe?",
+  "Looking for enterprise support?": "Brauchen Sie Unterstützung für ihr Unternehmen?",
+  "Alternatively you can…": "Alternativ können Sie auch…",
+  "Slack with our devs": "Slack mit unseren Entwicklern",
+  "Raise issues in Github": "Bei Git Probleme anbringen",
   "Requirements": "Voraussetzungen",
   "Results": "Ergebnisse",
   "See more success stories": "Mehr Erfolgsgeschichten lesen"
