feat: DE success stories

--- a/web/workspace/lang/de.json
+++ b/web/workspace/lang/de.json
@@ -65,5 +65,6 @@
   "Raise issues in Github": "Bei Git Probleme anbringen",
   "Requirements": "Voraussetzungen",
   "Results": "Ergebnisse",
+  "Video overview of the site." : "Video Überblick über die Seite.",
   "See more success stories": "Mehr Erfolgsgeschichten lesen"
 }
