feat: DE contact page

--- a/web/workspace/lang/de.json
+++ b/web/workspace/lang/de.json
@@ -66,5 +66,15 @@
   "Requirements": "Voraussetzungen",
   "Results": "Ergebnisse",
   "Video overview of the site." : "Video Überblick über die Seite.",
-  "See more success stories": "Mehr Erfolgsgeschichten lesen"
+  "See more success stories": "Mehr Erfolgsgeschichten lesen",
+  "Get in touch with the team.": "Kontaktieren Sie unser Team",
+  "Name": "Name",
+  "Email": "Email",
+  "Phone": "Telefon",
+  "Message": "Nachricht",
+  "Send message": "Absenden",
+  "Client engagement": "Kundenbetreuung",
+  "Media enquiries": "Medienanfragen",
+  "Careers": "Karriere",
+  "Everything else": "Sonstiges"
 }
