feat: DE concepts

--- a/web/workspace/lang/de.json
+++ b/web/workspace/lang/de.json
@@ -80,5 +80,7 @@
   "DADI is produced and maintained under an iterative and incremental development cycle. We manage development through Git Issues and Projects and operate a prioritized roadmap for major releases, focusing on a few, high impact features at a time.": "DADI wird produziert und gewartet innerhalb eines iterativen und inkrementellen Entwicklungszyklusses. Wir verwalten Weiterentwicklung durch Git Issues und Projekte und betreiben einen priorisierten Entwicklungsplan für bedeutende Releases, mit dem Fokus auf wenige, high-impact Features zu einer Zeit.",
   "You can help us improve DADI (or change this roadmap)": "Du kannst uns dabei helfen, DADI zu verbessern (oder diesen Entwicklungsplan zu ändern)",
   "Want to contribute to the work on this roadmap, or suggest new ideas? Volunteer your time, or Propose an initiative. To contribute as an organization or business, consider joining one of our supporter programs that fund this work.": "Du möchtest etwas zur Arbeit an diesem Entwicklungsplan beisteuern oder neue Ideen einbringen? Stelle deine Zeit zur Verfügung oder schlage eine Aktion vor. Um als Organisation oder Unternehmen etwas beizusteuern, denken sie darüber nach, einem der Supporter Programme beizutreten, die diese Arbeit finanzieren.",
-  "Your support can make a difference.": "Deine Unterstützung kann den Unterschied machen"
+  "Your support can make a difference.": "Deine Unterstützung kann den Unterschied machen",
+  "Platform concepts": "Plattform Konzepte",
+  "Explore the core principles behind our platform.": "Erlebe die Kernprinzipien hinter unserer Plattform."
 }
