feat: DE about page

--- a/web/workspace/lang/de.json
+++ b/web/workspace/lang/de.json
@@ -37,6 +37,7 @@
   "Your email address": "Ihre Emailadresse",
   "Subscribe": "Bestellen",
   "Contact us": "Kontakt",
+  "About &amp; Careers": "Über uns &amp; Karriere",
   "Support": "Support",
   "Latest": "Aktuelles",
   "On demand": "On demand",
