feat: DE how we work

--- a/web/workspace/lang/de.json
+++ b/web/workspace/lang/de.json
@@ -85,5 +85,6 @@
   "Platform concepts": "Plattform Konzepte",
   "Explore the core principles behind our platform.": "Erlebe die Kernprinzipien hinter unserer Plattform.",
   "Secure by default": "Standardmäßige Sicherheit",
-  "Designed from the ground up with security front and center": "Von Grund auf Entworfen mit Sicherheitsfront und Center."
+  "Designed from the ground up with security front and center": "Von Grund auf Entworfen mit Sicherheitsfront und Center.",
+  "By": "Von"
 }
